css/style.css
:root {
  --apppink: rgb(255, 136, 231);
  --appblack: #232a36;
  --appimage: white;
}
:root .light-mode {
  --apppink: #7868e6;
  --appblack: #d3e0ea;
  --appimage: black;
}
@font-face {
  font-family: mainfont;
  src: url(../fonts/Product_Sans_Regular.ttf) format('truetype');
}
@font-face {
  font-family: mainfontbold;
  src: url(../fonts/Product_Sans_Bold.ttf) format('truetype');
}
@font-face {
  font-family: mathfont;
  src: url(../fonts/BalsamiqSans-Regular.ttf) format('truetype');
}

body {
  background-color: var(--appblack);
  font-family: mainfont;
  overflow-x: hidden;
  height: 100vh;
}

html, body {
  overflow: visible;
}

body img {
  filter: invert(100%);
}


#setopfav, #interestfav, #pricesfav {
  filter: invert(0);
}

html {
  overflow-x: hidden;
}

.container {
  padding-bottom: 70%;
  padding-top: 1.5em;
}
.qcontainer {
  padding-bottom: 54%;
  padding-top: 1.5em;
}
.main{
  width:50%;
  float:left;
}


p {
  color: var(--appimage);
  font-size: 1.25rem;
}

.frac {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  letter-spacing: 0.001em;
  text-align: center;
}
.frac > span {
  display: block;
  padding: 0.1em;
}
.frac span.bottom {
  border-top: thin solid rgb(202, 15, 130);
}
.frac span.symbol {
  display: none;
}

.readonlybody {
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
  -ms-user-select: none;
  touch-action: auto;
  /* overflow-y: auto; */
  /* !important; */
  /*position: relative !important;*/
}
.form-control {
  border-radius: 3.125rem;
  margin: 0.125rem;
}

.btn {
  border-radius: 6.25rem !important;
}
a,
p,
label {
  color: var(--appimage) !important;
  text-align: center;
  margin-bottom: 0.3125rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--apppink);
}

.modal-title {
  color: #343a40;
}
.modal-body {
  background: var(--appblack);
}

.ulstyle {
  position: fixed;
  top: 0;
  left: 0;
  padding: 0 !important;
  height: 100%;
  background: var(--appblack);
}

.ulstyle li {
  list-style-type: none;
  padding: 0.625rem !important;
}

.ulstyle li a {
  color: var(--appimage) !important;
  font-family: mathfont;
  letter-spacing: 0.0625rem;
}

.ulstyle li a:hover,
.ulstyle li a:active {
  color: white !important;
}
.stopwrap {
  white-space: nowrap;
  overflow-y: hidden;
  overflow-x: auto;
  width: 100%;
  height: 100%;
  display: grid;
}

.carddis {
  width: 100%;
  background: white;
  color: black;
  border-radius: 2.5rem;
  outline: none !important;
  padding: 0.9375rem;
  font-size: 1.25rem;
  margin: 0.625rem;
}

#fav-button {
  position: relative;
  display: block;
  z-index: 10;
  float: right;
  padding: 0rem 0.625rem 0.125rem 0.625rem;
  text-transform: uppercase;
  border-radius: 0.5rem;
  border-color: white;
  color: var(--apppink);
  background-color: var(--appblack);
  outline: none;
  transition-duration: 0.4s;
}
#fav-button:hover {
  background-color: rgba(255, 244, 253, 0.993);
  font-weight: bolder;
}
.favouritecontainer {
  position: absolute;
  left: 76%;
  right: 0%;
  top: 15%;
  bottom: -0.9375rem;
  background-color: #02050a00;
  padding: 1.25rem;
  padding-right: 0rem;
  padding-left: 0;
  z-index: 900;
  border-top-left-radius: 1.875rem;
  border-top-right-radius: 1.875rem;
  overflow-y: auto !important;
  overflow-x: hidden !important;
}
#favourite:ul {
  padding-right: 0;
  list-style: none;
}
.favourites {
  border-radius: 1.125rem;
  border: 0.0625rem solid var(--apppink);
  background-color: var(--appblack);
  margin: 0.625rem;
  padding: 0.9375rem;
  text-align: center;
  color: white !important;
  cursor: pointer;
}
.nofavourites {
  border-radius: 1.125rem;
  border: 0.0625rem solid var(--apppink);
  background-color: var(--appblack);
  margin: 0.625rem;
  padding: 0.9375rem;
  text-align: center;
  color: white !important;
  cursor: pointer;
}

.nofavourites p{
  font-size: 1.1875rem;
}

.favnew {
  height: fit-content;
  border-top-left-radius: 1.125rem;
  border-bottom-left-radius: 1.125rem;
  border-top: 0.0625rem solid var(--apppink);
  border-bottom: 0.0625rem solid var(--apppink);
  border-left: 0.0625rem solid var(--apppink);
  background: var(--apppink) !important;
  margin-left: 0rem;
  font-size: 120%;
}

.favourites:hover {
  background-color: rgb(255, 136, 231);
  cursor: pointer;
}
@media screen and (max-width: 37.5rem) {
  .favouritecontainer {
    left: 10%;
    right: 5%;
    top: 15%;
    bottom: -0.9375rem;
    background-color: #232a36ce;
  }
  .favourites {
    border-top-right-radius: 1.125rem;
    border-bottom-right-radius: 1.125rem;
    border-top: 0.0625rem solid var(--apppink);
    border-bottom: 0.0625rem solid var(--apppink);
    border-left: 0.0625rem solid var(--apppink);
    background-color: var(--appblack);
    margin: 0.625rem;
    padding: 0.9375rem;
    text-align: center;
    color: white !important;
    cursor: pointer;
  }
  .nofavourites {
    border-top-right-radius: 1.125rem;
    border-bottom-right-radius: 1.125rem;
    border-top: 0.0625rem solid var(--apppink);
    border-bottom: 0.0625rem solid var(--apppink);
    border-left: 0.0625rem solid var(--apppink);
    background-color: var(--appblack);
    margin: 0.625rem;
    padding: 0.9375rem;
    text-align: center;
    color: white !important;
    cursor: pointer;
  }
  
}

::selection {
  color: var(--appblack);
  background-color: var(--apppink);
}
.mainheading {
  color: white;
  display: inline;
}
.searchbar-container {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-left: 40vh;
}
#search-txt {
  border: none;
  background: none !important;
  outline: none;
  float: left;
  padding: 0;
  color: white;
  font-size: 1rem;
  transition: 0.4s;
  line-height: 2.5rem;
  width: 0rem;
}
/* ... */

